[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "requestguard"
version = "0.1.4"
description = "A framework-agnostic, modular rate limiting library for Python with multiple algorithms and pluggable backends."
readme = "MINIMAL_USAGE.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["rate-limiting", "fastapi", "api", "throttling", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24.0",
    "uvicorn>=0.20.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["requestguard*"]


[tool.setuptools.package-data]
rateguard = ["py.typed"]
